--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,30 +1,35 @@
-name: Java CI
+name: Build & Release
 
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Gradle
-      env: 
-        file_name: ${{ secrets.FILE_NAME }}
-        url: ${{ secrets.URL }}
-        alias: ${{ secrets.ALIAS }}
-        storePass: ${{ secrets.STOREPASS }}
-        keyPass: ${{ secrets.KEYPASS }}
-        unreal_curse_api_key: ${{ secrets.UNREAL_CURSE_API_KEY }}
-      run: |
-        chmod +x gradlew
-        ./gradlew build curseforge
-    - uses: actions/upload-artifact@v2
-      with:
-        name: Artifacts
-        path: build/libs/
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 30 # Gets the last 30 commits so the changelog might work
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build & release to curseforge
+        env:
+          GIT_COMMIT: ${{ github.event.after }}
+          GIT_PREVIOUS_COMMIT: ${{ github.event.before }}
+          #     NANITE_DEPLOY: ${{ secrets.NANITE_DEPLOY  }}
+          CURSE_DEPLOY: ${{ secrets.CURSE_DEPLOY }}
+        run: |
+          chmod +x ./gradlew
+          ./gradlew build curseforge --stacktrace --no-daemon
