--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,11 @@
 org.gradle.jvmargs=-Xmx4G
-#org.gradle.daemon=false
 
-mcp_mappings=20201028-1.16.3
 minecraft_version=1.16.5
-forge_version=36.0.0
+forge_version=36.1.65
 
-version=1.1
-type=beta
+archives_base_name=JAMD
+mod_id=jamd
+
+mod_version=2.6.0
+release_type=release
 curseforge_id=422981
