--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,21 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
       - uses: actions/checkout@v2
         with:
           fetch-depth: 30 # Gets the last 30 commits so the changelog might work
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 1.16
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '16'
+          distribution: 'adopt'
+          cache: 'gradle'
       - name: Build & release to curseforge
         env:
           GIT_COMMIT: ${{ github.event.after }}
