--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 org.gradle.jvmargs=-Xmx4G
 
-minecraft_version=1.16.5
-forge_version=36.1.65
+minecraft_version=1.18
+forge_version=38.0.4
 
 archives_base_name=JAMD
 mod_id=jamd
 
-mod_version=1.2.4
-release_type=release
+mod_version=1.3.0
+release_type=beta
 curseforge_id=422981
