--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ forge_version=38.0.4
 archives_base_name=JAMD
 mod_id=jamd
 
-mod_version=1.4.0
-release_type=beta
+mod_version=1.4.1
+release_type=release
 curseforge_id=422981
