Fix typo in mod description

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,4 +5,4 @@ loaderVersion="[30,)"
     modId="jamd"
     version="${file.jarVersion}"
     displayName="Just Another Mining Dimension"
-    description="Mining Dimesions"
+    description="Mining Dimensions"
